fix some image layout issues

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -80,7 +80,8 @@ a {
   color: #367CDF;
   text-decoration: none; }
   a:hover {
-    text-decoration: underline; }
+    text-decoration: underline;
+    cursor: pointer; }
 
 p {
   margin-bottom: 2rem; }
@@ -162,7 +163,7 @@ h1.wine-form-heading {
   display: inline-block; }
 
 .wine-form {
-  min-height: 100vh;
+  height: 100vh;
   width: 100vw;
   display: grid;
   grid-template-columns: [uploader] 1fr [form] 1fr;
@@ -188,8 +189,15 @@ h1.wine-form-heading {
       .wine-form .upload-container .upload-image:focus + label {
         outline: 1px dotted #000;
         outline: -webkit-focus-ring-color auto 5px; }
-    .wine-form .upload-container img {
-      max-width: 80%; }
+    .wine-form .upload-container .uploaded-image-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .wine-form .upload-container .uploaded-image-container img {
+        max-height: 500px;
+        max-width: 80%; }
+      .wine-form .upload-container .uploaded-image-container a {
+        margin-top: 1rem; }
   .wine-form .normal-form-container {
     grid-column: form;
     padding: 2rem; }
